solution-files/challenge5/06-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-deployment
  namespace: api
  labels:
    deploy: trips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - image: "registryvnb0999.azurecr.io/trips:1.0"
        imagePullPolicy: Always
        name: trips
        resources:
          limits:
            memory: "100Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
        volumeMounts:
          - name: keyvault
            mountPath: /secrets
            readOnly: true
      volumes:
        - name: keyvault
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname"
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: trips
  ports:
    - protocol: TCP
      name: trips-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: trips-https
      port: 443
      targetPort: 443
