solution-files/challenge5/07-user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
  labels:
    deploy: user-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - image: "registryvnb0999.azurecr.io/user-java:1.0"
        imagePullPolicy: Always
        name: user-java
        resources:
          limits:
            memory: "800Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/user-java/healthcheck
            port: 80
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/user-java/healthcheck
            port: 80
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
        volumeMounts:
          - name: keyvault
            mountPath: /secrets
            readOnly: true
      volumes:
        - name: keyvault
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname"
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: user-java
  ports:
    - protocol: TCP
      name: user-java-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: user-java-https
      port: 443
      targetPort: 443
